# CG2019FallAssignment4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
depend/glad/include/glad/: glad.h
depend/glad/src/: glad.c
include/: camera.h  constants.h  texture.h  util.h
resources/: circle.frag  circle.vert  default.frag  default.vert
src/: main.cpp  test.klp
